@@ -20,9 +20,9 @@ import CamNecT.CamNecT_Server.domain.users.repository.UserRepository;
 import CamNecT.CamNecT_Server.global.common.exception.CustomException;
 import CamNecT.CamNecT_Server.global.common.response.errorcode.bydomains.AuthErrorCode;
 import CamNecT.CamNecT_Server.global.common.response.errorcode.bydomains.CoffeeChatErrorCode;
-import CamNecT.CamNecT_Server.global.tag.model.Majors;
+import CamNecT.CamNecT_Server.domain.profile.components.majors.model.Majors;
 import CamNecT.CamNecT_Server.global.tag.model.Tag;
-import CamNecT.CamNecT_Server.global.tag.repository.MajorRepository;
+import CamNecT.CamNecT_Server.domain.profile.components.majors.repository.MajorRepository;
 import CamNecT.CamNecT_Server.global.tag.repository.TagRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.messaging.simp.SimpMessagingTemplate;
@@ -246,7 +246,7 @@ public class ChatService {
 
 
         // 마지막으로 읽은 메시지 ID 추출 (없으면 0L임)
-        Long lastMessageId = unreadMessages.isEmpty() ? 0L : unreadMessages.get(unreadMessages.size() - 1).getId();
+        Long lastMessageId = unreadMessages.isEmpty() ? 0L : unreadMessages.getLast().getId();
 
         ChatReadEvent chatReadEvent = ChatReadEvent.of(
                 roomId,
